--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -560,19 +560,31 @@ html[lang="en"] .navmenu .lang-ar {
   position: fixed;
   width: 50px;
   height: 50px;
-  top: 50%;
-  right: 5px;
+  bottom: 20px; /* Changed: Distance from bottom */
+  left: 15px;   /* Changed: Distance from left */
+  /* Removed: top: 50% and right: 5px */
   background-color: #25d366;
   color: #FFF;
-  border-radius: 50px;
+  border-radius: 50%;
   text-align: center;
   font-size: 24px;
   box-shadow: 2px 2px 3px #999;
   z-index: 100;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: all 0.3s ease;
 }
 
-.my-float {
-  margin-top: 13px;
+/* Optional hover effect */
+.whats-app:hover {
+  transform: scale(1.1);
+  box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.3);
+}
+
+/* Update the icon positioning */
+.whats-app i {
+  margin-top: 0; /* Remove the my-float margin */
 }
 
 .footer h4 {
@@ -868,7 +880,7 @@ section,
   }
 
   .hero {
-    background-image: url('../img/mob.png');
+    background-image: url('../img/forMob.png');
     background-position: center top;
   }
 }
