--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -560,7 +560,7 @@ html[lang="en"] .navmenu .lang-ar {
   position: fixed;
   width: 50px;
   height: 50px;
-  bottom: 100px; /* Changed: Distance from bottom */
+  bottom: 20px; /* Changed: Distance from bottom */
   left: 15px;   /* Changed: Distance from left */
   /* Removed: top: 50% and right: 5px */
   background-color: #25d366;
@@ -882,6 +882,7 @@ section,
   .hero {
     background-image: url('../img/mob-bg.png');
     background-position: center top;
+    margin-left: 5px;
   }
 }
 
