--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -882,7 +882,7 @@ section,
   .hero {
     background-image: url('../img/mob-bg.png');
     background-position: center top;
-    margin-left: 5px;
+    margin-right: 5px;
   }
 }
 
